# spyc

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: new-release.yml  new_release.yml  pythonpackage.yml
spec/: __init__.py  _spec.py  internal.py  spec_types.py
spec/spec_types/: __init__.py  callable_spec.py  class_spec.py
specs/: __init__.py  internal.py  spec_types.py
spyc/: __init__.py  internal.py  spec_types.py
tests/: test_ensurance.py  test_implicit_conversions.py
tests/conformation/: test_regsitration_conformation.py
tests/internal/: test_spec_conformation.py
tests/is_valid/: test_combinations.py  test_member_validation.py  test_predicates_validation.py  test_type_validation.py
