[metadata]
name = spyc
version = 0.0.4
description = Python Specification and validation library.
long_description = file: README.md, CHANGELOG.md

author = Pajo
author_email = shacham6@gmail.com
url = https://github.com/shacham6/spyc

classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
python_requires = >=3.7, <4

[options.packages.find]
include =
    spyc
    spyc.*